# doudou-agent

./: .gitattributes  .gitignore  .prettierignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml  turbo.json
.github/workflows/: quality.yml
apps/doudou-agent-desktop/: README.md  index.html  package.json
apps/doudou-agent-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/doudou-agent-desktop/src-tauri/src/: main.rs
docs/superpowers/plans/: 2026-06-26-monorepo-foundation.md
docs/superpowers/specs/: 2026-06-26-monorepo-foundation-design.md
libs/doudou-agent-sdk/: pyproject.toml
libs/doudou-agent-sdk/doudou_agent_sdk/: __init__.py  base.py  config.py  provider.py  types.py
libs/doudou-demo/: pyproject.toml
libs/doudou-demo/doudou_demo/: __init__.py
services/agent-server/: .gitignore  AGENTS.md  agent-server.yaml  config.py  main.py  pyproject.toml
services/agent-server/agent_server/: auth.py  config.py  event.py  main.py  token_store.py  types.py
services/agent-server/agent_server/agent/: loop.py  session.py
services/agent-server/agent_server/agent/llm/: __init__.py  openai.py
services/agent-server/agent_server/plugin/: base.py  manager.py  registry.py
services/agent-server/docs/: architecture.md  plugin-spec.md
services/agent-server/tests/: conftest.py  test_agent_loop.py  test_auth.py  test_plugin_manager.py  test_token_store.py
services/agent_server/: .gitignore  AGENTS.md  README.md  agent-server.yaml  auth.py  config.py  event.py  main.py  models.py  provider_store.py  pyproject.toml  schemas.py  settings.py  token_store.py
services/agent_server/agent/: loop.py  session.py
services/agent_server/agent/llm/: __init__.py  base.py  openai.py
services/agent_server/builtins/ai_providers/: __init__.py
services/agent_server/builtins/ping_pong/: __init__.py
services/agent_server/docs/: architecture.md  plugin-spec.md
services/agent_server/plugin/: base.py  manager.py  registry.py
services/agent_server/tests/: conftest.py  test_agent_loop.py  test_auth.py  test_main.py  test_plugin_manager.py  test_settings.py  test_token_store.py
tooling/tests/: scaffold.test.mjs
