[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "doudou-agent-sdk"
version = "0.1.0"
description = "doudou-agent 插件开发 SDK — 插件作者依赖此包而非 agent-server"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["doudou_agent_sdk*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "single"
