[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "doudou-demo"
version = "0.1.0"
description = "doudou-agent 最小插件示例"
requires-python = ">=3.12"
dependencies = [
    "doudou-agent-sdk",
]

[tool.uv.sources]
doudou-agent-sdk = { path = "../../libs/doudou-agent-sdk" }

[tool.setuptools.packages.find]
where = ["."]
include = ["doudou_demo*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "single"
