[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-server"
version = "0.1.0"
description = "doudou-agent AI 后端服务"
requires-python = ">=3.12"
dependencies = [
    "doudou-agent-sdk",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "openai>=1.0.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.30",
    "tzdata>=2025",
]

[tool.uv.sources]
doudou-agent-sdk = { path = "../../libs/doudou-agent-sdk" }

[tool.setuptools.packages.find]
exclude = ["*"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "single"
